<resources>
    <string name="app_name">Porn Hub</string>
    <string name="date">Date</string>
    <string name="millage">millage</string>
    <string name="liters">liters</string>
    <string name="cost">cost</string>
    <string name="confirm">confirm</string>
    <string name="set_repair_cost">set repair cost</string>
    <string name="set_car_name">set car name</string>
    <string name="go_to_tank_form_button">go to tankup</string>
    <string name="go_to_repair_form_button">go to repair</string>
    <string name="go_to_collison_form_button">go to collision</string>
    <string name="set_reapir_car_name">set reapir car name</string>
    <string name="repair_cost">repair cost</string>
    <string name="given_repair_cost_error">given repair cost must be positive</string>
    <string name="repair_car_name">repair car name</string>
    <string name="make">make</string>
    <string name="model">model</string>
    <string name="given_cost_error">given cost must be positive!</string>
    <string name="given_millage_error">given millage must be positive!</string>
    <string name="given_liters_error">given liters must be positive!</string>
    <string name="set_make">set make</string>
    <string name="set_color">set color</string>
    <string name="set_cost">set cost</string>
    <string name="set_model">set model</string>
    <string name="set_millage">set millage!</string>
    <string name="set_liters">set liters</string>
    <string name="equals_millage_eror">millage must be higher than the previous</string>
    <string name="car_remove_allert">Are you sure, you want to remove this car and all its history?</string>

    <string name="color">color</string>
    <string name="make_demo">VolksWagen</string>
    <string name="model_demo">golf</string>
    <string name="color_demo">black</string>
    <string name="new_tankup">new tankup</string>
    <string name="new_tank">new \n tankup</string>
    <string name="new_repair">new \n repair</string>
    <string name="new_colision">new \n colision</string>
    <string name="repair">repair</string>
    <string name="new_car">new \n car</string>
    <string name="switch_confirme">my main car</string>
    <string name="data">date</string>
    <string name="przebieg">millage</string>
    <string name="litry">liters</string>
    <string name="koszt">cost</string>
    <string name="zatwierd">confirm</string>
    <string name="remove_selected_car">remove selected car</string>
    <string name="car_name">car name</string>
</resources>