<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/grey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp">


        <TextView
            android:id="@+id/makeEditTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make" />

        <EditText
            android:id="@+id/makeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/modelEditTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model" />

        <EditText
            android:id="@+id/modelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/colorEditTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <EditText
            android:id="@+id/colorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/switch_confirme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_confirme" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>
</LinearLayout>